--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "lodash.has": "^4.5.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuetify": "^2.2.11",
+    "vue-router": "^3.4.3",
+    "vuetify": "^2.3.8",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
