--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "jest",
     "lint": "vue-cli-service lint",
-    "start": "node server.js",
-    "test": "jest"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
